--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </div>
         <ul id="listcontainer">
         </ul>
+        <button id="clrall">Clear All</button>
     </div>
     <script src="script.js"></script>
 </body>
